2.7 / <not released yet>

 - Fixed
   - Possibility of segmentation fault with image list output when database
     existed but no data was available
   - ./configure output could show invalid install paths with some parameter
     combinations (pull request by Severin Glöckner)
 - New
   - Add --large / --small options to image output and LargeFonts
     configuration option for controlling the output font size
   - Add --scale for scaling the image output to a given percent
   - Add configuration option LineSpacingAdjustment for adjusting the line
     spacing of list format image outputs
   - Add bar visualizations for traffic estimations
   - Allow writing image output to a filename starting with -
   - Add --initdb to daemon for creating a new empty database without having
     the daemon process staying running, doesn't discard data if a database
     already exists
   - Add configuration option BarColumnShowsRate to have the bar column in
     image list outputs be scaled according to the average rate column values
     when those values are visible, disabled by default
   - Add --dbiflist for getting a list of interfaces in the database, both
     --iflist and --dbiflist also get alternative more parseable outputs


2.6 / 20-Jan-2020

 - Fixed
   - --json and --xml didn't support having both mode and limit parameters
     defined at the same time as documented, broken since previous release
   - Documentation was using a mix of "count" and "limit" for the option of
     limiting the maximum number of shown entries in queries
   - Summary image output would segmentation fault when the database existed
     but didn't yet contain any daily or monthly data for the selected
     interface
 - New
   - Add --limit as an alternative way for controlling the length of outputs


2.5 / 14-Jan-2020

 - Fixed
   - Automatic interface selection wasn't done for --traffic and --live when
     the Interface configuration setting was left empty