@@ -177,6 +177,10 @@ LargeFonts 0
 LineSpacingAdjustment 0
 ImageScale 100
 
+# 5 minutes graph size control
+5MinuteGraphResultCount 576
+5MinuteGraphHeight 300
+
 # traffic estimate bar style
 # (0 = not shown, 1 = continuation of existing bar, 2 = separate bar)
 EstimateStyle 1
