@@ -373,6 +373,15 @@ resolution.
 .SH IMAGE OUTPUT RELATED KEYWORDS
 
 .TP
+.B 5MinuteGraphResultCount
+Number of 5 minute periods to be included in the 5 minute resolution graph.
+The value affects the width of the graph. Value range: 288..5MinuteHours*12
+
+.TP
+.B 5MinuteGraphHeight
+Height of 5 minute resolution graph in pixels. Value range: 150..2000
+
+.TP
 .B BarColumnShowsRate
 The bar column represents traffic rate in list outputs when enabled. Requires
 also that
