@@ -260,6 +260,12 @@ and most can be changed later from the config file.
 /* bar column in list outputs shows rate when rate column is visible */
 #define BARSHOWSRATE 0
 
+/* 5 minute graph size */
+#define FIVEGRESULTCOUNT 576
+#define FIVEGHEIGHT 300
+#define FIVEGMINRESULTCOUNT 288
+#define FIVEGMINHEIGHT 150
+
 /* default colors */
 #define CBACKGROUND "FFFFFF"
 #define CEDGE "AEAEAE"
@@ -291,7 +297,8 @@ typedef struct {
 	int32_t unitmode, rateunitmode, rateunit, bvar, qmode, sampletime, hourlyrate, summaryrate;
 	int32_t monthrotate, monthrotateyears, maxbw, spacecheck, trafficlessentries, transbg, ostyle;
 	int32_t defaultdecimals, hourlydecimals, hourlystyle, is64bit, waldb, dbsynchronous, imagescale;
-	int32_t largefonts, linespaceadjust, estimatebarvisible, estimatestyle, barshowsrate;
+	int32_t largefonts, linespaceadjust, estimatebarvisible, estimatestyle, barshowsrate, fivegresultcount;
+	int32_t fivegheight;
 	char cfgfile[512], logfile[512], pidfile[512];
 	char daemonuser[33], daemongroup[33];
 	int32_t timesyncwait, updateinterval, pollinterval, saveinterval, offsaveinterval, savestatus;
